# surprisedelab_time

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
docs/: troubleshooting.md
docs/customization/: parameters.md  stimuli.md  styling.md
docs/setup/: getting-started.md  wave-integration.md
src/css/: styles.css
src/js/core/: instructions.js  params.js  timeline.js  trial.js
src/js/integrations/: wave-client.js
src/js/utils/: plugin-html-button-hold-response.js  plugin-html-button-hold-retry.js  plugin-html-slider-response-resizing.js  plugin-instructions.js  standard-functions.js
tools/: .env.example  add_participant_race.py  analyze_experiment.ipynb  calc_disptime.py  cleanup_test_experiments.ipynb  rename_images.py  setup_experiment.ipynb  utils.py
