[project]
name = "setup-experiment"
version = "0.1.0"
description = "This pyproject.toml file is only needed to install dependencies for running tools/setup_experiment/create_and_validate.ipynb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "scipy>=1.15.0",
    "statsmodels>=0.14.0",
    "python-dotenv>=1.1.1",
    "wave-client",
    "matplotlib>=3.10.0",
    "pillow>=11.0.0",
]

[tool.uv.sources]
wave-client = { url = "https://github.com/WAVE-Lab-Williams/wave-client/releases/latest/download/wave_client-1.1.0-py3-none-any.whl" }

[tool.black]
line-length = 100
extend-exclude = "notebooks"
